src/assets/styles/dialog.css
:where(dialog) {
  border: none;
  outline: none;
  width: 100%;
  max-width: 100%;
  height: 100%;
  max-height: 100%;

  h2 {
    font-size: clamp(2rem, 6vw, 2.5rem);
    opacity: 0;
    transition: opacity .5s ease;
    color: GrayText;
  }

  &[open] {
    h2 {
      opacity: 1;

      @starting-style {
        opacity: 0;
      }
    }
  }

  &[data-closing] {
    h2 {
      opacity: 0;
    }
  }
}

:where(.testimonials) {
  --delay: 0.5s;
  --bg-opacity: color-mix(in srgb, Canvas, transparent 10%);
  background-color: transparent;

  padding: 0;

  &::backdrop {
    opacity: 0;
    background-color: transparent;
    transition: opacity var(--delay) ease;
    background-image: radial-gradient(circle at center, transparent 0%, var(--bg-opacity) 40%, Canvas 100%);
  }

  &[open] {
    &::backdrop {
      opacity: 1;

      @starting-style {
        opacity: 0;
      }
    }

    .testimonial-close {
      &::before {
        transform: translate(0, 0) rotate(45deg) scale(1);
      }
      &::after {
        transform: translate(0, 0) rotate(135deg) scale(1);
      }

      @starting-style {
        &::before {
          transform: translate(0, -3px) rotate(0deg) scale(1.05, 1);
        }
        &::after {
          transform: translate(0, 3px) rotate(0deg) scale(1.05, 1);
        }
      }
    }
  }


  &[data-closing] {
    &::backdrop, .testimonial-blob {
      opacity: 0;
    }

    .testimonial-close {
      &::before {
        transform: translate(0, -3px) rotate(0deg) scale(1.05, 1);
      }
      &::after {
        transform: translate(0, 3px) rotate(0deg) scale(1.05, 1);
      }
    }
  }
}

:where(.testimonial-close) {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: Canvas;
  /* background-color: ButtonFace; */

  position: absolute;
  z-index: 2;
  left: 50%;
  bottom: clamp(1.5rem, 2.5vw, 2.5rem);
  translate: -50% 0;

  &::before,
  &::after {
    content: '';
    position: absolute;
    width: 1.5rem;
    height: 2px;
    background-color: CanvasText;
    /* background-color: ButtonText; */
    transition: transform 1s var(--ease-spring-3);
  }

  &::before {
    transform: translate(0, -3px) rotate(0deg) scale(1.1, 1);
  }
  &::after {
    transform: translate(0, 3px) rotate(0deg) scale(1.1, 1);
  }

  &:is(:hover) {
    outline: 2px solid GrayText;
  }
}

